test/fail_compilation/fail2.d
struct TestS
{
}

static void test()
{
    TestS s;
    s[] = error;
}

